--- a/client/index.html
+++ b/client/index.html
@@ -18,8 +18,8 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Icons -->
-    <link rel="icon" type="image/jpeg" href="/logo.jpg" />
-    <link rel="apple-touch-icon" href="/logo.jpg" />
+    <link rel="icon" type="image/png" href="/logo-new.png" />
+    <link rel="apple-touch-icon" href="/logo-new.png" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
