--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
     
     <!-- Icons -->
     <link rel="icon" type="image/png" href="/logo-new.png" />
-    <link rel="apple-touch-icon" href="/logo-new.png" />
+    <link rel="apple-touch-icon" href="/icon-192.png" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
